pontos de coleta

--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=PontosDeColeta
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8085
+
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.pontoscoleta
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+management.endpoints.web.exposure.include=*
+management.endpoint.info.enabled=true
