adicionado spring gateway

--- a/Marketplace/src/main/resources/application.properties
+++ b/Marketplace/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.application.name=Marketplace
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8083
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.marketplace
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Diretório para armazenamento de imagens de anúncios
+app.upload.dir=storage/images
