--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=PontosDeColeta
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8085
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
 # Configuração do banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.pontoscoleta
 spring.datasource.username=postgres
