--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
+
+
+#kafka
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
