--- a/Notificacao/src/main/resources/application.properties
+++ b/Notificacao/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=Notificacao
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8084
+
+#kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=notification-service
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.listener.missing-topics-fatal=false
