--- a/Notificacao/src/main/resources/application.properties
+++ b/Notificacao/src/main/resources/application.properties
@@ -2,6 +2,14 @@ spring.application.name=Notificacao
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8084
 
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.notificacao
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 #kafka
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-service
