--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.client.fetch-registry=true
 # Configuração do banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.pontoscoleta
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
