notificacoes de anuncios no marketplace

--- a/Notificacao/src/main/resources/application.properties
+++ b/Notificacao/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8084
 # Configuração do banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.notificacao
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
