--- a/Recompensas/src/main/resources/application.properties
+++ b/Recompensas/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=Recompensas
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8086
+
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/techcycle.recompensas
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
