--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.kafka.bootstrap-servers=localhost:9092
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+
+spring.jackson.serialization.FAIL_ON_SELF_REFERENCES=false
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
