--- a/PontosDeColeta/src/main/resources/application.properties
+++ b/PontosDeColeta/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PontosDeColeta
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-server.port=8085
-
+server.port=${SERVER-PORT}
+#8085
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
